# fairpley-backend

./: .env.example  .tbls.yml  Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml
doc/: schema.erd  spec.md
migrations/: 20250216083430_init.down.sql  20250216083430_init.up.sql
src/: entity.rs  error.rs  lib.rs
src/adapter/db/: postgres.rs
src/adapter/db/postgres/: event.rs  location.rs  purchase.rs  transport.rs  user.rs
src/entity/: event.rs  location.rs  purchase.rs  transport.rs  user.rs
src/entity/event/: id.rs
src/entity/location/: id.rs  type.rs
src/entity/purchase/: id.rs
src/entity/transport/: id.rs
src/entity/user/: id.rs
src/error/: messages.rs
src/service/: db.rs
src/service/db/: event.rs  location.rs  purchase.rs  transport.rs  user.rs
