[package]
name = "shapley-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
aide = { version = "0.14.1", features = ["axum", "axum-json", "scalar"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
indexmap = "2.7.1"
rstest = "0.24.0"
schemars = { version = "0.8.21", features = ["chrono", "uuid1"] }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = [
    "trace",
    "timeout",
    "cors",
    "normalize-path",
] }
tokio-util = { version = "0.7.13", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.1", features = ["v7", "fast-rng", "serde"] }

[profile.release]
debug = true
