[package]
name = "fairpley-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
aide = { version = "0.14.2", features = ["axum", "axum-json", "scalar"] }
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-macros = "0.5.0"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
indexmap = "2.8.0"
rstest = "0.25.0"
schemars = { version = "0.8.22", features = ["chrono", "uuid1"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.4", features = [
    "trace",
    "timeout",
    "cors",
    "normalize-path",
] }
tokio-util = { version = "0.7.15", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v7", "fast-rng", "serde"] }

[profile.release]
debug = true
